@@ -1,5 +1,5 @@
-/**
- * Copyright (C) 2000 - 2012 Silverpeas
+/*
+ * Copyright (C) 2000 - 2013 Silverpeas
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -9,7 +9,7 @@
  * As a special exception to the terms and conditions of version 3.0 of
  * the GPL, you may redistribute this Program in connection with Free/Libre
  * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
+ * FLOSS exception.  You should have recieved a copy of the text describing
  * the FLOSS exception, and it is also available here:
  * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
@@ -23,31 +23,13 @@
  */
 package com.stratelia.webactiv.kmelia.servlets;
 
-import java.io.File;
-import java.io.IOException;
-import java.net.URLEncoder;
-import java.rmi.RemoteException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Date;
-import java.util.HashSet;
-import java.util.List;
-import java.util.StringTokenizer;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.xml.parsers.ParserConfigurationException;
-
-import org.apache.commons.fileupload.FileItem;
-import org.xml.sax.SAXException;
-
 import com.silverpeas.form.DataRecord;
 import com.silverpeas.form.Form;
 import com.silverpeas.form.FormException;
 import com.silverpeas.form.PagesContext;
 import com.silverpeas.form.RecordSet;
 import com.silverpeas.kmelia.KmeliaConstants;
+import com.silverpeas.kmelia.SearchContext;
 import com.silverpeas.kmelia.updatechainhelpers.UpdateChainHelper;
 import com.silverpeas.kmelia.updatechainhelpers.UpdateChainHelperContext;
 import com.silverpeas.pdc.web.PdcClassificationEntity;
@@ -71,8 +53,6 @@ import com.stratelia.silverpeas.peasCore.URLManager;
 import com.stratelia.silverpeas.peasCore.servlets.ComponentRequestRouter;
 import com.stratelia.silverpeas.selection.Selection;
 import com.stratelia.silverpeas.silvertrace.SilverTrace;
-import com.stratelia.silverpeas.versioning.model.DocumentVersion;
-import com.stratelia.silverpeas.wysiwyg.control.WysiwygController;
 import com.stratelia.webactiv.SilverpeasRole;
 import com.stratelia.webactiv.beans.admin.ProfileInst;
 import com.stratelia.webactiv.kmelia.KmeliaSecurity;
@@ -100,23 +80,44 @@ import com.stratelia.webactiv.util.publication.info.model.ModelDetail;
 import com.stratelia.webactiv.util.publication.model.Alias;
 import com.stratelia.webactiv.util.publication.model.CompletePublication;
 import com.stratelia.webactiv.util.publication.model.PublicationDetail;
+import org.apache.commons.fileupload.FileItem;
+import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang3.CharEncoding;
+import org.silverpeas.importExport.versioning.DocumentVersion;
+import org.silverpeas.wysiwyg.control.WysiwygController;
+import org.xml.sax.SAXException;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.xml.parsers.ParserConfigurationException;
+import java.io.File;
+import java.io.IOException;
+import java.net.URLEncoder;
+import java.rmi.RemoteException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.List;
+import java.util.StringTokenizer;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionController> {
 
   private static final long serialVersionUID = 1L;
-
   private static final StatisticRequestHandler statisticRequestHandler =
       new StatisticRequestHandler();
 
   /**
    * This method creates a KmeliaSessionController instance
+   *
    * @param mainSessionCtrl The MainSessionController instance
    * @param context Context of current component instance
    * @return a KmeliaSessionController instance
    */
   @Override
   public KmeliaSessionController createComponentSessionController(
-          MainSessionController mainSessionCtrl, ComponentContext context) {
+      MainSessionController mainSessionCtrl, ComponentContext context) {
     return new KmeliaSessionController(mainSessionCtrl, context);
   }
 
@@ -132,6 +133,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   /**
    * This method has to be implemented by the component request rooter it has to compute a
    * destination page
+   *
    * @param function The entering request function ( : "Main.jsp")
    * @param kmelia The component Session Control, build and initialised.
    * @param request The entering request. The request rooter need it to get parameters
@@ -142,7 +144,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   public String getDestination(String function, KmeliaSessionController kmelia,
       HttpServletRequest request) {
     SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()", "root.MSG_GEN_PARAM_VALUE",
-            "function = " + function);
+        "function = " + function);
     String destination = "";
     String rootDestination = "/kmelia/jsp/";
     boolean profileError = false;
@@ -150,8 +152,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
     boolean toolboxMode = false;
     try {
       SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()",
-              "root.MSG_GEN_PARAM_VALUE", "getComponentRootName() = " +
-                  kmelia.getComponentRootName());
+          "root.MSG_GEN_PARAM_VALUE", "getComponentRootName() = " + kmelia.getComponentRootName());
       if ("kmax".equals(kmelia.getComponentRootName())) {
         kmaxMode = true;
         kmelia.isKmaxMode = true;
@@ -175,8 +176,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       } else if (function.startsWith("validateClassification")) {
         String[] publicationIds = request.getParameterValues("pubid");
         Collection<KmeliaPublication> publications = kmelia.getPublications(asPks(kmelia.
-                getComponentId(), publicationIds));
-        request.setAttribute("Context", GeneralPropertiesManager.getString("ApplicationURL"));
+            getComponentId(), publicationIds));
+        request.setAttribute("Context", URLManager.getApplicationURL());
         request.setAttribute("PublicationsDetails", publications);
         destination = rootDestination + "validateImportedFilesClassification.jsp";
       } else if (function.startsWith("portlet")) {
@@ -210,7 +211,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("LinkedPathString", kmelia.getSessionPath());
 
         destination = rootDestination + "repository.jsp";
-      } else if (function.equals("GoToTopic")) {
+      } else if ("GoToTopic".equals(function)) {
         String topicId = (String) request.getAttribute("Id");
         if (!StringUtil.isDefined(topicId)) {
           topicId = request.getParameter("Id");
@@ -218,11 +219,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
             topicId = NodePK.ROOT_NODE_ID;
           }
         }
-
         kmelia.setCurrentFolderId(topicId, true);
-
         resetWizard(kmelia);
-
         request.setAttribute("CurrentFolderId", topicId);
         request.setAttribute("DisplayNBPublis", kmelia.displayNbPublis());
         request.setAttribute("DisplaySearch", kmelia.isSearchOnTopicsEnabled());
@@ -234,6 +232,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("IsGuest", kmelia.getUserDetail().isAccessGuest());
         request.setAttribute("RightsOnTopicsEnabled", kmelia.isRightsOnTopicsEnabled());
         request.setAttribute("WysiwygDescription", kmelia.getWysiwygOnTopic());
+        request.setAttribute("PageIndex", kmelia.getIndexOfFirstPubToDisplay());
+        
         if (kmelia.isTreeviewUsed()) {
           destination = rootDestination + "treeview.jsp";
         } else if (kmelia.isTreeStructure()) {
@@ -252,20 +252,30 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         destination = rootDestination + "basket.jsp";
       } else if (function.equals("ViewPublicationsToValidate")) {
         destination = rootDestination + "publicationsToValidate.jsp";
+      } else if ("GoBackToResults".equals(function)) {
+        request.setAttribute("SearchContext", kmelia.getSearchContext());
+        destination = getDestination("GoToCurrentTopic", kmelia, request);
       } else if (function.startsWith("searchResult")) {
         resetWizard(kmelia);
         String id = request.getParameter("Id");
         String type = request.getParameter("Type");
         String fileAlreadyOpened = request.getParameter("FileOpened");
+        String from = request.getParameter("From");
+        if ("Search".equals(from)) {
+          // identify clearly access from global search
+          // because same URL is used from portlet, permalink...
+          request.setAttribute("SearchScope", SearchContext.GLOBAL);
+        }
+        
         if (type != null && ("Publication".equals(type)
-                || "com.stratelia.webactiv.calendar.backbone.TodoDetail".equals(type)
-                || "Attachment".equals(type) || "Document".equals(type)
-                || type.startsWith("Comment"))) {
-          KmeliaSecurity security = new KmeliaSecurity(kmelia.getOrganizationController());
+            || "com.stratelia.webactiv.calendar.backbone.TodoDetail".equals(type)
+            || "Attachment".equals(type) || "Document".equals(type)
+            || type.startsWith("Comment"))) {
+          KmeliaSecurity security = new KmeliaSecurity(kmelia.getOrganisationController());
           try {
             boolean accessAuthorized =
-                    security.isAccessAuthorized(kmelia.getComponentId(), kmelia.getUserId(), id,
-                        "Publication");
+                security.isAccessAuthorized(kmelia.getComponentId(), kmelia.getUserId(), id,
+                "Publication");
             if (accessAuthorized) {
               processPath(kmelia, id);
               if ("Attachment".equals(type)) {
@@ -283,10 +293,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
                 } else if (toolboxMode) {
                   // we have to find which page contains the right publication
                   List<KmeliaPublication> publications = kmelia.getSessionPublicationsList();
-                  KmeliaPublication publication = null;
                   int pubIndex = -1;
                   for (int p = 0; p < publications.size() && pubIndex == -1; p++) {
-                    publication = publications.get(p);
+                    KmeliaPublication publication = publications.get(p);
                     if (id.equals(publication.getDetail().getPK().getId())) {
                       pubIndex = p;
                     }
@@ -309,7 +318,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
             }
           } catch (Exception e) {
             SilverTrace.error("kmelia", "KmeliaRequestRouter.getDestination()",
-                    "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
+                "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
             destination = getDocumentNotFoundDestination(kmelia, request);
           }
         } else if ("Node".equals(type)) {
@@ -326,7 +335,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
               destination = getDestination("GoToTopic", kmelia, request);
             } catch (Exception e) {
               SilverTrace.error("kmelia", "KmeliaRequestRouter.getDestination()",
-                      "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
+                  "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
               destination = getDocumentNotFoundDestination(kmelia, request);
             }
           }
@@ -356,7 +365,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           }
         } catch (Exception e) {
           SilverTrace.error("kmelia", "KmeliaRequestRouter.getDestination()",
-                  "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
+              "root.MSG_GEN_PARAM_VALUE", "Document Not Found = " + e.getMessage(), e);
           destination = getDocumentNotFoundDestination(kmelia, request);
         }
       } else if (function.startsWith("publicationManager")) {
@@ -368,13 +377,12 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         List<NodeDetail> path = kmelia.getTopicPath(kmelia.getCurrentFolderId());
         request.setAttribute("Path", path);
         request.setAttribute("Profile", kmelia.getProfile());
-        
         String action = (String) request.getAttribute("Action");
         if (!StringUtil.isDefined(action)) {
           action = "UpdateView";
           request.setAttribute("Action", action);
         }
-        
+
         if ("UpdateView".equals(action)) {
           request.setAttribute("TaxonomyOK", kmelia.isPublicationTaxonomyOK());
           request.setAttribute("ValidatorsOK", kmelia.isPublicationValidatorsOK());
@@ -383,7 +391,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           request.setAttribute("TaxonomyOK", true);
           request.setAttribute("ValidatorsOK", true);
         }
-                
+
         destination = rootDestination + "publicationManager.jsp";
         // thumbnail error for front explication
         if (request.getParameter("errorThumbnail") != null) {
@@ -419,8 +427,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String id = request.getParameter("Id");
         NodeDetail node = kmelia.getSubTopicDetail(id);
         if (!SilverpeasRole.admin.isInRole(kmelia.getUserTopicProfile(id))
-                && !SilverpeasRole.admin.isInRole(kmelia.getUserTopicProfile(node.getFatherPK().
-                    getId()))) {
+            && !SilverpeasRole.admin.isInRole(kmelia.getUserTopicProfile(node.getFatherPK().
+            getId()))) {
           destination = "/admin/jsp/accessForbidden.jsp";
         } else {
           request.setAttribute("NodeDetail", node);
@@ -527,7 +535,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         destination = getDestination("GoToCurrentTopic", kmelia, request);
       } else if (function.equals("ViewClone")) {
         PublicationDetail pubDetail =
-                kmelia.getSessionPublication().getDetail();
+            kmelia.getSessionPublication().getDetail();
 
         // Reload clone and put it into session
         String cloneId = pubDetail.getCloneId();
@@ -542,13 +550,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("ValidatorsOK", kmelia.isPublicationValidatorsOK());
 
         putXMLDisplayerIntoRequest(kmeliaPublication.getDetail(), kmelia,
-                request);
+            request);
 
         // Attachments area must be displayed or not ?
         request.setAttribute("AttachmentsEnabled", kmelia.isAttachmentsEnabled());
 
         destination = rootDestination + "clone.jsp";
-      } else if (function.equals("ViewPublication")) {
+      } else if ("ViewPublication".equals(function)) {
         String id = request.getParameter("PubId");
         if (!StringUtil.isDefined(id)) {
           id = request.getParameter("Id");
@@ -565,16 +573,25 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
             processPath(kmelia, null);
           }
         }
+        
+        // view publication from global search ?
+        Integer searchScope = (Integer) request.getAttribute("SearchScope");
+        if (searchScope == null) {
+          if (kmelia.getSearchContext() != null) {
+            request.setAttribute("SearchScope", SearchContext.LOCAL);
+          } else {
+            request.setAttribute("SearchScope", SearchContext.NONE);
+          }
+        }
 
-        KmeliaPublication kmeliaPublication = null;
+        KmeliaPublication kmeliaPublication;
         if (StringUtil.isDefined(id)) {
           kmeliaPublication = kmelia.getPublication(id, true);
           kmelia.setSessionPublication(kmeliaPublication);
 
           PublicationDetail pubDetail = kmeliaPublication.getDetail();
           if (pubDetail.haveGotClone()) {
-            KmeliaPublication clone =
-                    kmelia.getPublication(pubDetail.getCloneId());
+            KmeliaPublication clone = kmelia.getPublication(pubDetail.getCloneId());
             kmelia.setSessionClone(clone);
           }
         } else {
@@ -592,13 +609,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
             request.setAttribute("ContentLanguage", kmelia.getCurrentLanguage());
           } else {
             request.setAttribute("ContentLanguage", checkLanguage(kmelia, kmeliaPublication.
-                    getDetail()));
+                getDetail()));
           }
           request.setAttribute("Languages", publicationLanguages);
 
           // see also management
           Collection<ForeignPK> links = kmeliaPublication.getCompleteDetail().getLinkList();
-          HashSet<String> linkedList = new HashSet<String>();
+          HashSet<String> linkedList = new HashSet<String>(links.size());
           for (ForeignPK link : links) {
             linkedList.add(link.getId() + "/" + link.getInstanceId());
           }
@@ -607,10 +624,11 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
           request.setAttribute("Publication", kmeliaPublication);
           request.setAttribute("PubId", id);
-          request.setAttribute("UserCanValidate", kmelia.isUserCanValidatePublication());
+          request.setAttribute("UserCanValidate",
+              kmelia.isUserCanValidatePublication() && kmelia.getSessionClone() == null);
           request.setAttribute("ValidationStep", kmelia.getValidationStep());
           request.setAttribute("ValidationType", kmelia.getValidationType());
-          
+
           // check if user is writer with approval right (versioning case)
           request.setAttribute("WriterApproval", kmelia.isWriterApproval(id));
           request.setAttribute("NotificationAllowed", kmelia.isNotificationAllowed());
@@ -620,6 +638,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
           if (kmeliaPublication.isAlias()) {
             request.setAttribute("Profile", "user");
+            request.setAttribute("TaxonomyOK", false);
+            request.setAttribute("ValidatorsOK", false);
             request.setAttribute("IsAlias", "1");
           } else {
             request.setAttribute("Profile", kmelia.getProfile());
@@ -635,18 +655,15 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           } else {
             request.setAttribute("NbPublis", 1);
           }
-
-          putXMLDisplayerIntoRequest(kmeliaPublication.getDetail(),
-                  kmelia, request);
-
+          putXMLDisplayerIntoRequest(kmeliaPublication.getDetail(), kmelia, request);
           String fileAlreadyOpened = (String) request.getAttribute("FileAlreadyOpened");
           boolean alreadyOpened = "1".equals(fileAlreadyOpened);
           String attachmentId = (String) request.getAttribute("AttachmentId");
           String documentId = (String) request.getAttribute("DocumentId");
           if (!alreadyOpened && kmelia.openSingleAttachmentAutomatically()
-                  && !kmelia.isCurrentPublicationHaveContent()) {
+              && !kmelia.isCurrentPublicationHaveContent()) {
             request.setAttribute("SingleAttachmentURL", kmelia.
-                    getFirstAttachmentURLOfCurrentPublication());
+                getFirstAttachmentURLOfCurrentPublication());
           } else if (!alreadyOpened && attachmentId != null) {
             request.setAttribute("SingleAttachmentURL", kmelia.getAttachmentURL(attachmentId));
           } else if (!alreadyOpened && documentId != null) {
@@ -660,8 +677,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           request.setAttribute("NewsManage", kmelia.isNewsManage());
           if (kmelia.isNewsManage()) {
             request.setAttribute("DelegatedNews", kmelia.getDelegatedNews(id));
-            request
-                .setAttribute("IsBasket", NodePK.BIN_NODE_ID.equals(kmelia.getCurrentFolderId()));
+            request.setAttribute("IsBasket", NodePK.BIN_NODE_ID.equals(kmelia.getCurrentFolderId()));
           }
 
           destination = rootDestination + "publication.jsp";
@@ -684,8 +700,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         } else {
           kmelia.copyPublication(objectId);
         }
-        destination =
-                URLManager.getURL(URLManager.CMP_CLIPBOARD) + "Idle.jsp?message=REFRESHCLIPBOARD";
+
+        destination = URLManager.getURL(URLManager.CMP_CLIPBOARD, null, null)
+            + "Idle.jsp?message=REFRESHCLIPBOARD";
       } else if (function.startsWith("cut")) {
         String objectType = request.getParameter("Object");
         String objectId = request.getParameter("Id");
@@ -694,62 +711,62 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         } else {
           kmelia.cutPublication(objectId);
         }
-        destination =
-                URLManager.getURL(URLManager.CMP_CLIPBOARD) + "Idle.jsp?message=REFRESHCLIPBOARD";
+
+        destination = URLManager.getURL(URLManager.CMP_CLIPBOARD, null, null)
+            + "Idle.jsp?message=REFRESHCLIPBOARD";
       } else if (function.startsWith("paste")) {
         kmelia.paste();
-        destination = URLManager.getURL(URLManager.CMP_CLIPBOARD) + "Idle.jsp";
+        destination = URLManager.getURL(URLManager.CMP_CLIPBOARD, null, null) + "Idle.jsp";
       } else if (function.startsWith("ToAlertUserAttachment")) { // utilisation de alertUser et
         // alertUserPeas
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUserAttachment: function = " + function
-                    + " spaceId="
-                    + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUserAttachment: function = " + function
+            + " spaceId=" + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
         try {
           String attachmentId = request.getParameter("AttachmentOrDocumentId");
-          destination = kmelia.initAlertUserAttachment(attachmentId, false);
+          destination = kmelia.initAlertUserAttachment(attachmentId);
         } catch (Exception e) {
           SilverTrace.warn("kmelia", "KmeliaRequestRooter.getDestination()",
-                  "root.EX_USERPANEL_FAILED", "function = " + function, e);
+              "root.EX_USERPANEL_FAILED", "function = " + function, e);
         }
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUserAttachment: function = " + function
-                    + "=> destination="
-                    + destination);
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUserAttachment: function = " + function
+            + "=> destination="
+            + destination);
       } else if (function.startsWith("ToAlertUserDocument")) { // utilisation de alertUser et
         // alertUserPeas
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUserDocument: function = " + function
-                    + " spaceId="
-                    + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUserDocument: function = " + function
+            + " spaceId="
+            + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
         try {
           String documentId = request.getParameter("AttachmentOrDocumentId");
-          destination = kmelia.initAlertUserAttachment(documentId, true);
+          destination = kmelia.initAlertUserAttachment(documentId);
         } catch (Exception e) {
           SilverTrace.warn("kmelia", "KmeliaRequestRooter.getDestination()",
-                  "root.EX_USERPANEL_FAILED", "function = " + function, e);
+              "root.EX_USERPANEL_FAILED", "function = " + function, e);
         }
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUserDocument: function = " + function
-                    + "=> destination="
-                    + destination);
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUserDocument: function = " + function
+            + "=> destination="
+            + destination);
       } else if (function.startsWith("ToAlertUser")) { // utilisation de alertUser et alertUserPeas
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUser: function = " + function + " spaceId="
-                    + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUser: function = " + function + " spaceId="
+            + kmelia.getSpaceId() + " componentId=" + kmelia.getComponentId());
         try {
           destination = kmelia.initAlertUser();
         } catch (Exception e) {
           SilverTrace.warn("kmelia", "KmeliaRequestRooter.getDestination()",
-                  "root.EX_USERPANEL_FAILED", "function = " + function, e);
+              "root.EX_USERPANEL_FAILED", "function = " + function, e);
         }
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "ToAlertUser: function = " + function
-                    + "=> destination="
-                    + destination);
+            "root.MSG_GEN_PARAM_VALUE", "ToAlertUser: function = " + function
+            + "=> destination="
+            + destination);
       } else if (function.equals("ReadingControl")) {
         PublicationDetail publication =
-                kmelia.getSessionPublication().getDetail();
+            kmelia.getSessionPublication().getDetail();
         request.setAttribute("LinkedPathString", kmelia.getSessionPath());
         request.setAttribute("Publication", publication);
         request.setAttribute("UserIds", kmelia.getUserIdsOfTopic());
@@ -769,10 +786,10 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         // put current publication
         if (!kmelia.isVersionControlled()) {
           request.setAttribute("CurrentPublicationDetail", kmelia.getSessionPubliOrClone().
-                  getDetail());
+              getDetail());
         } else {
           request.setAttribute("CurrentPublicationDetail", kmelia.getSessionPublication().
-                  getDetail());
+              getDetail());
         }
         // Paramètres du wizard
         setWizardParams(request, kmelia);
@@ -810,46 +827,37 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("Role", kmelia.getProfile());
 
         destination = rootDestination + "validationSteps.jsp";
-      } else if (function.equals("ValidatePublication")) {
-        String pubId =
-                kmelia.getSessionPublication().getDetail().getPK().getId();
+      } else if ("ValidatePublication".equals(function)) {
+        String pubId = kmelia.getSessionPublication().getDetail().getPK().getId();
+
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "function = " + function + " pubId=" + pubId);
+            "root.MSG_GEN_PARAM_VALUE", "function = " + function + " pubId=" + pubId);
 
         boolean validationComplete = kmelia.validatePublication(pubId);
-
         if (validationComplete) {
           request.setAttribute("Action", "ValidationComplete");
+          destination = getDestination("ViewPublication", kmelia, request);
         } else {
           request.setAttribute("Action", "ValidationInProgress");
+          if (kmelia.getSessionClone() != null) {
+            destination = getDestination("ViewClone", kmelia, request);
+          } else {
+            destination = getDestination("ViewPublication", kmelia, request);
+          }
         }
-
-        request.setAttribute("PubId", pubId);
-        destination = getDestination("ViewPublication", kmelia, request);
       } else if (function.equals("ForceValidatePublication")) {
-        String pubId =
-                kmelia.getSessionPublication().getDetail().getPK().getId();
-
+        String pubId = kmelia.getSessionPublication().getDetail().getPK().getId();
         kmelia.forcePublicationValidation(pubId);
-
         request.setAttribute("Action", "ValidationComplete");
 
         request.setAttribute("PubId", pubId);
         destination = getDestination("ViewPublication", kmelia, request);
-      } else if (function.equals("WantToRefusePubli")) {
-        PublicationDetail pubDetail =
-                kmelia.getSessionPubliOrClone().getDetail();
-
-        request.setAttribute("PublicationToRefuse", pubDetail);
-
-        destination = rootDestination + "refusalMotive.jsp";
-      } else if (function.equals("Unvalidate")) {
+      } else if ("Unvalidate".equals(function)) {
         String motive = request.getParameter("Motive");
+        String pubId = kmelia.getSessionPublication().getDetail().getPK().getId();
 
-        String pubId =
-                kmelia.getSessionPublication().getDetail().getPK().getId();
         SilverTrace.debug("kmelia", "KmeliaRequestRooter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "function = " + function + " pubId=" + pubId);
+            "root.MSG_GEN_PARAM_VALUE", "function = " + function + " pubId=" + pubId);
 
         kmelia.unvalidatePublication(pubId, motive);
 
@@ -884,7 +892,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           destination = getDestination("ViewClone", kmelia, request);
         } else {
           String pubId =
-                  kmelia.getSessionPubliOrClone().getDetail().getPK().getId();
+              kmelia.getSessionPubliOrClone().getDetail().getPK().getId();
           String from = request.getParameter("From");
           if (StringUtil.isDefined(from)) {
             destination = getDestination(from, kmelia, request);
@@ -905,27 +913,21 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         NodeDetail topic = kmelia.getSubTopicDetail(subTopicId);
 
         destination =
-                request.getScheme() + "://" + kmelia.getServerNameAndPort()
-                    + URLManager.getApplicationURL() + "/wysiwyg/jsp/htmlEditor.jsp?";
+            request.getScheme() + "://" + kmelia.getServerNameAndPort()
+            + URLManager.getApplicationURL() + "/wysiwyg/jsp/htmlEditor.jsp?";
         destination += "SpaceId=" + kmelia.getSpaceId();
-        destination += "&SpaceName=" + URLEncoder.encode(kmelia.getSpaceLabel(), "UTF-8");
+        destination += "&SpaceName=" + URLEncoder.encode(kmelia.getSpaceLabel(), CharEncoding.UTF_8);
         destination += "&ComponentId=" + kmelia.getComponentId();
-        destination +=
-                "&ComponentName=" + URLEncoder.encode(kmelia.getComponentLabel(), "UTF-8");
-        destination +=
-                "&BrowseInfo="
-                    +
-                    URLEncoder.encode(kmelia.getSessionPathString() + " > " + topic.getName() +
-                        " > "
-                        + kmelia.getString("TopicWysiwyg"), "UTF-8");
+        destination += "&ComponentName=" + URLEncoder.encode(kmelia.getComponentLabel(), CharEncoding.UTF_8);
+        destination += "&BrowseInfo=" + URLEncoder.encode(kmelia.getSessionPathString() + " > "
+            + topic.getName() + " > " + kmelia.getString("TopicWysiwyg"), CharEncoding.UTF_8);
+
         destination += "&ObjectId=Node_" + subTopicId;
         destination += "&Language=fr";
-        destination +=
-                "&ReturnUrl="
-                    + URLEncoder.encode(URLManager.getApplicationURL()
-                        + URLManager.getURL(kmelia.getSpaceId(), kmelia.getComponentId())
-                        + "FromTopicWysiwyg?Action=Search&Id=" + topicId + "&ChildId=" + subTopicId
-                        + "&Profile=" + flag, "UTF-8");
+        destination += "&ReturnUrl=" + URLEncoder.encode(URLManager.getApplicationURL()
+            + URLManager.getURL(kmelia.getSpaceId(), kmelia.getComponentId())
+            + "FromTopicWysiwyg?Action=Search&Id=" + topicId + "&ChildId=" + subTopicId
+            + "&Profile=" + flag, "UTF-8");
       } else if (function.equals("FromTopicWysiwyg")) {
         String subTopicId = request.getParameter("ChildId");
 
@@ -993,24 +995,25 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String topicId = request.getParameter("TopicId");
         // build an exploitable list by importExportPeas
         SilverTrace.info("kmelia", "KmeliaSessionController.getAllVisiblePublicationsByTopic()",
-                "root.MSG_PARAM_VALUE", "topicId =" + topicId);
+            "root.MSG_PARAM_VALUE", "topicId =" + topicId);
         List<WAAttributeValuePair> publicationsIds =
-                kmelia.getAllVisiblePublicationsByTopic(topicId);
+            kmelia.getAllVisiblePublicationsByTopic(topicId);
         request.setAttribute("selectedResultsWa", publicationsIds);
         request.setAttribute("RootId", topicId);
         // Go to importExportPeas
         destination = "/RimportExportPeas/jsp/ExportPDF";
       } else if (function.equals("NewPublication")) {
         request.setAttribute("Action", "New");
-        
         destination = getDestination("publicationManager", kmelia, request);
+      } else if (function.equals("ManageSubscriptions")) {
+        destination = kmelia.manageSubscriptions();
       } else if (function.equals("AddPublication")) {
         List<FileItem> parameters = FileUploadUtil.parseRequest(request);
 
         // create publication
         String positions = FileUploadUtil.getParameter(parameters, "Positions");
         PdcClassificationEntity withClassification =
-                PdcClassificationEntity.undefinedClassification();
+            PdcClassificationEntity.undefinedClassification();
         if (StringUtil.isDefined(positions)) {
           withClassification = PdcClassificationEntity.fromJSON(positions);
         }
@@ -1033,9 +1036,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         } else {
           StringBuffer requestURI = request.getRequestURL();
           destination = requestURI.substring(0, requestURI.indexOf("AddPublication"))
-                  + "ViewPublication?PubId=" + newPubId;
+              + "ViewPublication?PubId=" + newPubId;
         }
-      } else if (function.equals("UpdatePublication")) {
+      } else if ("UpdatePublication".equals(function)) {
         List<FileItem> parameters = FileUploadUtil.parseRequest(request);
 
         PublicationDetail pubDetail = getPublicationDetail(parameters, kmelia);
@@ -1082,7 +1085,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("Publication", publication);
         request.setAttribute("LinkedPathString", kmelia.getSessionPath());
         request.setAttribute("PathList", kmelia.getPublicationFathers(pubId));
-        
+
         if (toolboxMode) {
           request.setAttribute("Topics", kmelia.getAllTopics());
         } else {
@@ -1101,7 +1104,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         for (int i = 0; topics != null && i < topics.length; i++) {
           String topicId = topics[i];
           SilverTrace.debug("kmelia", "KmeliaRequestRouter.setPath()", "root.MSG_GEN_PARAM_VALUE",
-                  "topicId = " + topicId);
+              "topicId = " + topicId);
           StringTokenizer tokenizer = new StringTokenizer(topicId, ",");
           String nodeId = tokenizer.nextToken();
           String instanceId = tokenizer.nextToken();
@@ -1133,10 +1136,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       } else if (function.equals("AddLinksToPublication")) {
         String id = request.getParameter("PubId");
         String topicId = request.getParameter("TopicId");
-
-        HashSet<String> list =
-                (HashSet<String>) request.getSession().getAttribute(
-                    KmeliaConstants.PUB_TO_LINK_SESSION_KEY);
+        HashSet<String> list = (HashSet<String>) request.getSession().getAttribute(
+            KmeliaConstants.PUB_TO_LINK_SESSION_KEY);
 
         int nb = kmelia.addPublicationsToLink(id, list);
 
@@ -1162,9 +1163,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           String topicId = request.getParameter("TopicId");
           // build an exploitable list by importExportPeas
           SilverTrace.info("kmelia", "KmeliaSessionController.getAllVisiblePublicationsByTopic()",
-                  "root.MSG_PARAM_VALUE", "topicId =" + topicId);
+              "root.MSG_PARAM_VALUE", "topicId =" + topicId);
           List<WAAttributeValuePair> publicationsIds =
-                  kmelia.getAllVisiblePublicationsByTopic(topicId);
+              kmelia.getAllVisiblePublicationsByTopic(topicId);
           request.setAttribute("selectedResultsWa", publicationsIds);
           request.setAttribute("RootId", topicId);
           // Go to importExportPeas
@@ -1184,13 +1185,14 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         // Go to importExportPeas
         destination = "/RimportExportPeas/jsp/SelectExportMode";
       } else if (function.equals("ToPubliContent")) {
-        CompletePublication completePublication =
-                kmelia.getSessionPubliOrClone().getCompleteDetail();
-
+        CompletePublication completePublication = kmelia.getSessionPubliOrClone()
+            .getCompleteDetail();
         if (completePublication.getModelDetail() != null) {
           destination = getDestination("ToDBModel", kmelia, request);
-        } else if (WysiwygController.haveGotWysiwyg(kmelia.getSpaceId(), kmelia.getComponentId(),
-                completePublication.getPublicationDetail().getPK().getId())) {
+        } else if (WysiwygController.haveGotWysiwyg(kmelia.getComponentId(), 
+            completePublication.getPublicationDetail().getPK().getId(), 
+            kmelia.getCurrentLanguage())) {
+
           destination = getDestination("ToWysiwyg", kmelia, request);
         } else {
           String infoId = completePublication.getPublicationDetail().getInfoId();
@@ -1223,21 +1225,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
         // put current publication
         request.setAttribute("CurrentPublicationDetail", kmelia.getSessionPublication().
-                getDetail());
+            getDetail());
 
         // Paramètres du wizard
         setWizardParams(request, kmelia);
         destination = rootDestination + "modelsList.jsp";
       } else if (function.equals("ModelUsed")) {
-        try {
-          List<PublicationTemplate> templates =
-                  getPublicationTemplateManager().getPublicationTemplates();
-          request.setAttribute("XMLForms", templates);
-        } catch (Exception e) {
-          SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination(ModelUsed)",
-                  "root.MSG_GEN_PARAM_VALUE", "", e);
-        }
-
+        request.setAttribute("XMLForms", kmelia.getForms());
         // put dbForms
         Collection<ModelDetail> dbForms = kmelia.getAllModels();
         request.setAttribute("DBForms", dbForms);
@@ -1255,34 +1249,33 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       } else if ("ChangeTemplate".equals(function)) {
         kmelia.removePublicationContent();
         destination = getDestination("ToPubliContent", kmelia, request);
-      } else if (function.equals("ToWysiwyg")) {
+      } else if ("ToWysiwyg".equals(function)) {
         if (kmelia.isCloneNeeded()) {
           kmelia.clonePublication();
         }
         // put current publication
         request.setAttribute("CurrentPublicationDetail", kmelia.getSessionPubliOrClone().
-                getDetail());
+            getDetail());
 
         // Parametres du Wizard
         setWizardParams(request, kmelia);
-
-        request.setAttribute("CurrentLanguage", checkLanguage(kmelia));
+        request.setAttribute("Language", kmelia.getContentLanguage());
+        request.setAttribute("CurrentLanguage", kmelia.getContentLanguage());
 
         destination = rootDestination + "toWysiwyg.jsp";
-      } else if (function.equals("FromWysiwyg")) {
+      } else if ("FromWysiwyg".equals(function)) {
         String id = request.getParameter("PubId");
 
         // Parametres du Wizard
         String wizard = kmelia.getWizard();
         setWizardParams(request, kmelia);
-
         if (wizard.equals("progress")) {
           request.setAttribute("Position", "Content");
           destination = getDestination("WizardNext", kmelia, request);
         } else {
           if (kmelia.getSessionClone() != null
-                  && id.equals(kmelia.getSessionClone().getDetail().getPK().
-                      getId())) {
+              && id.equals(kmelia.getSessionClone().getDetail().getPK().
+              getId())) {
             destination = getDestination("ViewClone", kmelia, request);
           } else {
             destination = getDestination("ViewPublication", kmelia, request);
@@ -1297,7 +1290,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
         // put current publication
         request.setAttribute("CompletePublication", kmelia.getSessionPubliOrClone().
-                getCompleteDetail());
+            getCompleteDetail());
         request.setAttribute("NotificationAllowed", kmelia.isNotificationAllowed());
 
         // Paramètres du wizard
@@ -1309,59 +1302,42 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
         List<InfoTextDetail> textDetails = new ArrayList<InfoTextDetail>();
         List<InfoImageDetail> imageDetails = new ArrayList<InfoImageDetail>();
-        String theText = null;
-        int textOrder = 0;
         int imageOrder = 0;
-        String logicalName = "";
-        String physicalName = "";
-        long size = 0;
-        String type = "";
-        String mimeType = "";
-        File dir = null;
-        InfoDetail infos = null;
         boolean imageTrouble = false;
-        boolean runOnUnix = !FileUtil.isWindows();
         List<FileItem> parameters = FileUploadUtil.parseRequest(request);
         String modelId = FileUploadUtil.getParameter(parameters, "ModelId");
-
         // Parametres du Wizard
         setWizardParams(request, kmelia);
 
         for (FileItem item : parameters) {
           if (item.isFormField() && item.getFieldName().startsWith("WATXTVAR")) {
-            theText = item.getString();
-            textOrder = Integer.parseInt(item.getFieldName().substring(8,
-                    item.getFieldName().length()));
+            String theText = item.getString();
+            int textOrder = Integer.parseInt(item.getFieldName().substring(8,
+                item.getFieldName().length()));
             textDetails.add(new InfoTextDetail(null, Integer.toString(textOrder), null, theText));
           } else if (!item.isFormField()) {
-            logicalName = item.getName();
+            String logicalName = item.getName();
             if (logicalName != null && logicalName.length() > 0) {
-              // the part actually contained a file
-
-              if (runOnUnix) {
+              if (!FileUtil.isWindows()) {
                 logicalName = logicalName.replace('\\', File.separatorChar);
                 SilverTrace.info("kmelia", "KmeliaRequestRouter.UpdateDBModelContent",
-                        "root.MSG_GEN_PARAM_VALUE", "fileName on Unix = " + logicalName);
+                    "root.MSG_GEN_PARAM_VALUE", "fileName on Unix = " + logicalName);
               }
+              logicalName = FilenameUtils.getName(logicalName);
+              String physicalName = Long.toString(System.currentTimeMillis()) + "." + FilenameUtils
+                  .getExtension(logicalName);
+              String mimeType = item.getContentType();
+              long size = item.getSize();
 
-              logicalName =
-                      logicalName.substring(logicalName.lastIndexOf(File.separator) + 1,
-                          logicalName.length());
-              type = logicalName.substring(logicalName.lastIndexOf(".") + 1, logicalName.length());
-              physicalName = Long.toString(System.currentTimeMillis()) + "." + type;
-              mimeType = item.getContentType();
-              size = item.getSize();
-
-              dir = new File(FileRepositoryManager.getAbsolutePath(kmelia.getComponentId())
-                      + publicationSettings.getString("imagesSubDirectory") + File.separator
-                      + physicalName);
-              if ("gif".equalsIgnoreCase(type) || "jpg".equalsIgnoreCase(type)
-                      || "jpeg".equalsIgnoreCase(type) || "png".equalsIgnoreCase(type)) {
+              File dir = new File(FileRepositoryManager.getAbsolutePath(kmelia.getComponentId())
+                  + publicationSettings.getString("imagesSubDirectory") + File.separatorChar
+                  + physicalName);
+              if (FileUtil.isImage(logicalName)) {
                 item.write(dir);
                 imageOrder++;
-                if (size > 0) {
+                if (size > 0L) {
                   imageDetails.add(new InfoImageDetail(null, Integer.toString(imageOrder),
-                          null, physicalName, logicalName, "", mimeType, size));
+                      null, physicalName, logicalName, "", mimeType, size));
                   imageTrouble = false;
                 } else {
                   imageTrouble = true;
@@ -1375,16 +1351,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           }
         }
 
-        infos = new InfoDetail(null, textDetails, imageDetails, null, "");
-
+        InfoDetail infos = new InfoDetail(null, textDetails, imageDetails, null, "");
         CompletePublication completePub = kmelia.getSessionPubliOrClone().getCompleteDetail();
-
         if (completePub.getModelDetail() == null) {
           kmelia.createInfoModelDetail("useless", modelId, infos);
         } else {
           kmelia.updateInfoDetail("useless", infos);
         }
-
         if (imageTrouble) {
           request.setAttribute("ImageTrouble", Boolean.TRUE);
         }
@@ -1401,24 +1374,20 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         if (!StringUtil.isDefined(xmlFormName)) {
           xmlFormName = (String) request.getAttribute("Name");
         }
-
         setXMLForm(request, kmelia, xmlFormName);
-
         // put current publication
         request.setAttribute("CurrentPublicationDetail", kmelia.getSessionPubliOrClone().
-                getDetail());
-
+            getDetail());
         // Parametres du Wizard
         setWizardParams(request, kmelia);
-
         // template can be changed only if current topic is using at least two templates
         setTemplatesUsedIntoRequest(kmelia, request);
         @SuppressWarnings("unchecked")
         Collection<PublicationTemplate> templates =
-                (Collection<PublicationTemplate>) request.getAttribute("XMLForms");
+            (Collection<PublicationTemplate>) request.getAttribute("XMLForms");
         boolean wysiwygUsable = (Boolean) request.getAttribute("WysiwygValid");
         request.setAttribute("IsChangingTemplateAllowed",
-                templates.size() >= 2 || (!templates.isEmpty() && wysiwygUsable));
+            templates.size() >= 2 || (!templates.isEmpty() && wysiwygUsable));
 
         destination = rootDestination + "xmlForm.jsp";
       } else if (function.equals("UpdateXMLForm")) {
@@ -1433,9 +1402,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         List<FileItem> items = FileUploadUtil.parseRequest(request);
 
         PublicationDetail pubDetail =
-                kmelia.getSessionPubliOrClone().getDetail();
+            kmelia.getSessionPubliOrClone().getDetail();
 
-        String xmlFormShortName = null;
+        String xmlFormShortName;
 
         // Is it the creation of the content or an update ?
         String infoId = pubDetail.getInfoId();
@@ -1444,38 +1413,27 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
           // The publication have no content
           // We have to register xmlForm to publication
-          xmlFormShortName =
-                  xmlFormName.substring(xmlFormName.indexOf("/") + 1, xmlFormName.indexOf("."));
+          xmlFormShortName = xmlFormName.substring(xmlFormName.indexOf('/') + 1, xmlFormName.indexOf('.'));
           pubDetail.setInfoId(xmlFormShortName);
           kmelia.updatePublication(pubDetail);
         } else {
           xmlFormShortName = pubDetail.getInfoId();
         }
-
         String pubId = pubDetail.getPK().getId();
-
-        PublicationTemplate pub =
-                getPublicationTemplateManager().getPublicationTemplate(
-                    kmelia.getComponentId() + ":"
-                        + xmlFormShortName);
-
+        PublicationTemplate pub = getPublicationTemplateManager().getPublicationTemplate(
+            kmelia.getComponentId() + ":" + xmlFormShortName);
         RecordSet set = pub.getRecordSet();
         Form form = pub.getUpdateForm();
-
         String language = checkLanguage(kmelia, pubDetail);
-
         DataRecord data = set.getRecord(pubId, language);
         if (data == null) {
           data = set.getEmptyRecord();
           data.setId(pubId);
           data.setLanguage(language);
         }
-
-        PagesContext context =
-                new PagesContext("myForm", "3", kmelia.getLanguage(), false, kmelia
-                    .getComponentId(),
-                    kmelia.getUserId());
-        context.setEncoding("UTF-8");
+        PagesContext context = new PagesContext("myForm", "3", kmelia.getLanguage(), false, kmelia
+            .getComponentId(), kmelia.getUserId());
+        context.setEncoding(CharEncoding.UTF_8);
         if (!kmaxMode) {
           context.setNodeId(kmelia.getCurrentFolderId());
         }
@@ -1556,7 +1514,6 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           request.setAttribute("RightsDependsOn", "ThisTopic");
         } else {
           profile = kmelia.getProfile(role);
-
           // Rights of the component
           request.setAttribute("RightsDependsOn", "ThisComponent");
         }
@@ -1576,7 +1533,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           kmelia.initUserPanelForTopicProfile(role, nodeId);
         } catch (Exception e) {
           SilverTrace.warn("jobStartPagePeas", "JobStartPagePeasRequestRouter.getDestination()",
-                  "root.EX_USERPANEL_FAILED", "function = " + function, e);
+              "root.EX_USERPANEL_FAILED", "function = " + function, e);
         }
         destination = Selection.getSelectionURL(Selection.TYPE_USERS_GROUPS);
       } else if (function.equals("TopicProfileSetUsersAndGroups")) {
@@ -1603,21 +1560,22 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
         request.setAttribute("PubId", pubId);
         destination = getDestination("ViewPublication", kmelia, request);
-      }/***************************
-       * Kmax mode
-       **************************/
+      }/**
+       * *************************
+       * Kmax mode ***********************
+       */
       else if (function.equals("KmaxMain")) {
         destination = rootDestination + "kmax.jsp?Action=KmaxView&Profile=" + kmelia.getProfile();
       } else if (function.equals("KmaxAxisManager")) {
         destination =
-                rootDestination + "kmax_axisManager.jsp?Action=KmaxViewAxis&Profile="
-                    + kmelia.getProfile();
+            rootDestination + "kmax_axisManager.jsp?Action=KmaxViewAxis&Profile="
+            + kmelia.getProfile();
       } else if (function.equals("KmaxAddAxis")) {
         String newAxisName = request.getParameter("Name");
         String newAxisDescription = request.getParameter("Description");
         NodeDetail axis =
-                new NodeDetail("-1", newAxisName, newAxisDescription, DateUtil.today2SQLDate(),
-                    kmelia.getUserId(), null, "0", "X");
+            new NodeDetail("-1", newAxisName, newAxisDescription, DateUtil.today2SQLDate(),
+            kmelia.getUserId(), null, "0", "X");
         // I18N
         I18NHelper.setI18NInfo(axis, request);
         kmelia.addAxis(axis);
@@ -1629,7 +1587,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String newAxisName = request.getParameter("AxisName");
         String newAxisDescription = request.getParameter("AxisDescription");
         NodeDetail axis =
-                new NodeDetail(axisId, newAxisName, newAxisDescription, null, null, null, "0", "X");
+            new NodeDetail(axisId, newAxisName, newAxisDescription, null, null, null, "0", "X");
         // I18N
         I18NHelper.setI18NInfo(axis, request);
         kmelia.updateAxis(axis);
@@ -1642,25 +1600,22 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String axisId = request.getParameter("AxisId");
         String translation = request.getParameter("Translation");
         request.setAttribute("Translation", translation);
-        destination =
-                rootDestination + "kmax_axisManager.jsp?Action=KmaxManageAxis&Profile="
-                    + kmelia.getProfile() + "&AxisId=" + axisId;
+        destination = rootDestination + "kmax_axisManager.jsp?Action=KmaxManageAxis&Profile="
+            + kmelia.getProfile() + "&AxisId=" + axisId;
       } else if (function.equals("KmaxManagePosition")) {
         String positionId = request.getParameter("PositionId");
         String translation = request.getParameter("Translation");
         request.setAttribute("Translation", translation);
         destination =
-                rootDestination + "kmax_axisManager.jsp?Action=KmaxManagePosition&Profile="
-                    + kmelia.getProfile() + "&PositionId=" + positionId;
+            rootDestination + "kmax_axisManager.jsp?Action=KmaxManagePosition&Profile="
+            + kmelia.getProfile() + "&PositionId=" + positionId;
       } else if (function.equals("KmaxAddPosition")) {
         String axisId = request.getParameter("AxisId");
         String newPositionName = request.getParameter("Name");
         String newPositionDescription = request.getParameter("Description");
         String translation = request.getParameter("Translation");
-        NodeDetail position =
-                new NodeDetail("toDefine", newPositionName, newPositionDescription, null, null,
-                    null,
-                    "0", "X");
+        NodeDetail position = new NodeDetail("toDefine", newPositionName, newPositionDescription,
+            null, null, null, "0", "X");
         // I18N
         I18NHelper.setI18NInfo(position, request);
         kmelia.addPosition(axisId, position);
@@ -1671,10 +1626,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String positionId = request.getParameter("PositionId");
         String positionName = request.getParameter("PositionName");
         String positionDescription = request.getParameter("PositionDescription");
-        NodeDetail position =
-                new NodeDetail(positionId, positionName, positionDescription, null, null, null,
-                    "0",
-                    "X");
+        NodeDetail position = new NodeDetail(positionId, positionName, positionDescription, null,
+            null, null, "0", "X");
         // I18N
         I18NHelper.setI18NInfo(position, request);
         kmelia.updatePosition(position);
@@ -1689,22 +1642,22 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         kmelia.orderPubs();
 
         destination =
-                rootDestination + "kmax.jsp?Action=KmaxViewUnbalanced&Profile="
-                    + kmelia.getProfile();
+            rootDestination + "kmax.jsp?Action=KmaxViewUnbalanced&Profile="
+            + kmelia.getProfile();
       } else if (function.equals("KmaxViewBasket")) {
         TopicDetail basket = kmelia.getTopic("1");
         List<KmeliaPublication> publications = (List<KmeliaPublication>) basket.
-                getKmeliaPublications();
+            getKmeliaPublications();
         kmelia.setSessionPublicationsList(publications);
         kmelia.orderPubs();
 
         destination =
-                rootDestination + "kmax.jsp?Action=KmaxViewBasket&Profile=" + kmelia.getProfile();
+            rootDestination + "kmax.jsp?Action=KmaxViewBasket&Profile=" + kmelia.getProfile();
 
       } else if (function.equals("KmaxViewToValidate")) {
         destination =
-                rootDestination + "kmax.jsp?Action=KmaxViewToValidate&Profile="
-                    + kmelia.getProfile();
+            rootDestination + "kmax.jsp?Action=KmaxViewToValidate&Profile="
+            + kmelia.getProfile();
       } else if (function.equals("KmaxSearch")) {
         String axisValuesStr = request.getParameter("SearchCombination");
         if (!StringUtil.isDefined(axisValuesStr)) {
@@ -1713,8 +1666,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String timeCriteria = request.getParameter("TimeCriteria");
 
         SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "axisValuesStr = " + axisValuesStr + " timeCriteria="
-                    + timeCriteria);
+            "root.MSG_GEN_PARAM_VALUE", "axisValuesStr = " + axisValuesStr + " timeCriteria="
+            + timeCriteria);
         List<String> combination = kmelia.getCombination(axisValuesStr);
         List<KmeliaPublication> publications = null;
         if (StringUtil.isDefined(timeCriteria) && !"X".equals(timeCriteria)) {
@@ -1723,8 +1676,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           publications = kmelia.search(combination);
         }
         SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "publications = " + publications + " Combination="
-                    + combination + " timeCriteria=" + timeCriteria);
+            "root.MSG_GEN_PARAM_VALUE", "publications = " + publications + " Combination="
+            + combination + " timeCriteria=" + timeCriteria);
 
         kmelia.setIndexOfFirstPubToDisplay("0");
         kmelia.orderPubs();
@@ -1732,14 +1685,14 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         kmelia.setSessionTimeCriteria(timeCriteria);
 
         destination =
-                rootDestination + "kmax.jsp?Action=KmaxSearchResult&Profile=" + kmelia.getProfile();
+            rootDestination + "kmax.jsp?Action=KmaxSearchResult&Profile=" + kmelia.getProfile();
       } else if (function.equals("KmaxSearchResult")) {
         if (kmelia.getSessionCombination() == null) {
           destination = getDestination("KmaxMain", kmelia, request);
         } else {
           destination =
-                  rootDestination + "kmax.jsp?Action=KmaxSearchResult&Profile="
-                      + kmelia.getProfile();
+              rootDestination + "kmax.jsp?Action=KmaxSearchResult&Profile="
+              + kmelia.getProfile();
         }
       } else if (function.equals("KmaxViewCombination")) {
         setWizardParams(request, kmelia);
@@ -1766,7 +1719,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         String coordinateId = request.getParameter("CoordinateId");
         String pubId = request.getParameter("PubId");
         SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()",
-                "root.MSG_GEN_PARAM_VALUE", "coordinateId = " + coordinateId + " PubId=" + pubId);
+            "root.MSG_GEN_PARAM_VALUE", "coordinateId = " + coordinateId + " PubId=" + pubId);
         kmelia.deletePublicationFromCombination(pubId, coordinateId);
         destination = getDestination("KmaxViewCombination", kmelia, request);
       } else if (function.equals("KmaxExportComponent")) {
@@ -1783,15 +1736,11 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         // get the time axis
         String timeCriteria = null;
         if (kmelia.isTimeAxisUsed() && StringUtil.isDefined(kmelia.getSessionTimeCriteria())) {
-          ResourceLocator timeSettings =
-                  new ResourceLocator("com.stratelia.webactiv.kmelia.multilang.timeAxisBundle",
-                      kmelia.getLanguage());
+          ResourceLocator timeSettings = new ResourceLocator("org.silverpeas.kmelia.multilang.timeAxisBundle",kmelia.getLanguage());
           if (kmelia.getSessionTimeCriteria().equals("X")) {
             timeCriteria = null;
           } else {
-            timeCriteria =
-                    "<b>" + kmelia.getString("TimeAxis") + "</b> > "
-                        + timeSettings.getString(kmelia.getSessionTimeCriteria(), "");
+            timeCriteria = "<b>" + kmelia.getString("TimeAxis") + "</b> > " + timeSettings.getString(kmelia.getSessionTimeCriteria(), "");
           }
         }
         request.setAttribute("selectedResultsWa", publicationsIds);
@@ -1799,10 +1748,11 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         request.setAttribute("TimeCriteria", timeCriteria);
         // Go to importExportPeas
         destination = "/RimportExportPeas/jsp/KmaxExportPublications";
-      }/************ End Kmax Mode *****************/
+      }
       else if ("statistics".equals(function)) {
-        destination = rootDestination + statisticRequestHandler.handleRequest(request, function, kmelia);
-      }else if("statSelectionGroup".equals(function)) {
+        destination = rootDestination + statisticRequestHandler.handleRequest(request, function,
+            kmelia);
+      } else if ("statSelectionGroup".equals(function)) {
         destination = statisticRequestHandler.handleRequest(request, function, kmelia);
       } else {
         destination = rootDestination + function;
@@ -1812,7 +1762,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         destination = GeneralPropertiesManager.getString("sessionTimeout");
       }
       SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination()",
-              "root.MSG_GEN_PARAM_VALUE", "destination = " + destination);
+          "root.MSG_GEN_PARAM_VALUE", "destination = " + destination);
     } catch (Exception exce_all) {
       request.setAttribute("javax.servlet.jsp.jspException", exce_all);
       return "/admin/jsp/errorpageMain.jsp";
@@ -1821,13 +1771,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private String getDocumentNotFoundDestination(KmeliaSessionController kmelia,
-          HttpServletRequest request) {
+      HttpServletRequest request) {
     request.setAttribute("ComponentId", kmelia.getComponentId());
     return "/admin/jsp/documentNotFound.jsp";
   }
 
   private PublicationDetail getPublicationDetail(List<FileItem> parameters,
-          KmeliaSessionController kmelia) throws Exception {
+      KmeliaSessionController kmelia) throws Exception {
     String id = FileUploadUtil.getParameter(parameters, "PubId");
     String status = FileUploadUtil.getParameter(parameters, "Status");
     String name = FileUploadUtil.getParameter(parameters, "Name");
@@ -1864,7 +1814,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       pubId = id;
     }
     PublicationDetail pubDetail = new PublicationDetail(pubId, name, description, null, jBeginDate,
-            jEndDate, null, importance, version, keywords, "", status, "", author);
+        jEndDate, null, importance, version, keywords, "", status, "", author);
     pubDetail.setBeginHour(beginHour);
     pubDetail.setEndHour(endHour);
     pubDetail.setStatus(status);
@@ -1885,8 +1835,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private void processVignette(List<FileItem> parameters, KmeliaSessionController kmelia,
-          PublicationDetail publication)
-          throws Exception {
+      PublicationDetail publication)
+      throws Exception {
     // First, check if image have been uploaded
     FileItem file = FileUploadUtil.getFile(parameters, "WAIMGVAR0");
     String mimeType = null;
@@ -1900,7 +1850,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         if (FileUtil.isImage(logicalName)) {
           physicalName = String.valueOf(System.currentTimeMillis()) + '.' + type;
           File dir = new File(FileRepositoryManager.getAbsolutePath(kmelia.getComponentId())
-                  + kmelia.getPublicationSettings().getString("imagesSubDirectory"));
+              + kmelia.getPublicationSettings().getString("imagesSubDirectory"));
           if (!dir.exists()) {
             dir.mkdirs();
           }
@@ -1923,8 +1873,8 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
     // If one image is defined, save it through Thumbnail service
     if (StringUtil.isDefined(physicalName)) {
       ThumbnailDetail detail = new ThumbnailDetail(kmelia.getComponentId(),
-              Integer.parseInt(publication.getPK().getId()),
-              ThumbnailDetail.THUMBNAIL_OBJECTTYPE_PUBLICATION_VIGNETTE);
+          Integer.parseInt(publication.getPK().getId()),
+          ThumbnailDetail.THUMBNAIL_OBJECTTYPE_PUBLICATION_VIGNETTE);
       detail.setOriginalFileName(physicalName);
       detail.setMimeType(mimeType);
       try {
@@ -1937,12 +1887,12 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
         }
       } catch (ThumbnailRuntimeException e) {
         SilverTrace.error("Thumbnail", "ThumbnailRequestRouter.addThumbnail",
-                "root.MSG_GEN_PARAM_VALUE", e);
+            "root.MSG_GEN_PARAM_VALUE", e);
         try {
           ThumbnailController.deleteThumbnail(detail);
         } catch (Exception exp) {
           SilverTrace.info("Thumbnail", "ThumbnailRequestRouter.addThumbnail - remove after error",
-                  "root.MSG_GEN_PARAM_VALUE", exp);
+              "root.MSG_GEN_PARAM_VALUE", exp);
         }
       }
     }
@@ -1950,13 +1900,14 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
   /**
    * Process Form Upload for publications import
+   *
    * @param kmeliaScc
    * @param request
    * @param routeDestination
    * @return destination
    */
   private String processFormUpload(KmeliaSessionController kmeliaScc,
-          HttpServletRequest request, String routeDestination, boolean isMassiveMode) {
+      HttpServletRequest request, String routeDestination, boolean isMassiveMode) {
     String destination = "";
     String topicId = "";
     String importMode = KmeliaSessionController.UNITARY_IMPORT_MODE;
@@ -1968,11 +1919,11 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
     String tempFolderPath = "";
 
     String fileType = "";
-    long fileSize = 0;
+    long fileSize = 0L;
     long processStart = new Date().getTime();
     ResourceLocator attachmentResourceLocator = new ResourceLocator(
-            "com.stratelia.webactiv.util.attachment.multilang.attachment",
-            kmeliaScc.getLanguage());
+        "org.silverpeas.util.attachment.multilang.attachment",
+        kmeliaScc.getLanguage());
     FileItem fileItem = null;
     int versionType = DocumentVersion.TYPE_DEFAULT_VERSION;
 
@@ -1982,7 +1933,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       importMode = FileUploadUtil.getParameter(items, "opt_importmode");
 
       String sVersionType = FileUploadUtil.getParameter(items,
-              "opt_versiontype");
+          "opt_versiontype");
       if (StringUtil.isDefined(sVersionType)) {
         versionType = Integer.parseInt(sVersionType);
       }
@@ -2001,13 +1952,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           if (runOnUnix) {
             logicalName = logicalName.replace('\\', File.separatorChar);
             SilverTrace.info("kmelia", "KmeliaRequestRouter.processFormUpload",
-                    "root.MSG_GEN_PARAM_VALUE", "fileName on Unix = "
-                        + logicalName);
+                "root.MSG_GEN_PARAM_VALUE", "fileName on Unix = "
+                + logicalName);
           }
 
           logicalName =
-                  logicalName.substring(logicalName.lastIndexOf(File.separator) + 1,
-                      logicalName.length());
+              logicalName.substring(logicalName.lastIndexOf(File.separator) + 1,
+              logicalName.length());
 
           // Name of temp folder: timestamp and userId
           tempFolderName = Long.toString(System.currentTimeMillis()) + "_" + kmeliaScc.getUserId();
@@ -2024,39 +1975,36 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
           // Directory Temp for the uploaded file
           tempFolderPath = FileRepositoryManager.getAbsolutePath(kmeliaScc.getComponentId())
-                  + GeneralPropertiesManager.getString("RepositoryTypeTemp") + File.separator + tempFolderName;
+              + GeneralPropertiesManager.getString("RepositoryTypeTemp") + File.separator
+              + tempFolderName;
           if (!new File(tempFolderPath).exists()) {
             FileRepositoryManager.createAbsolutePath(kmeliaScc.getComponentId(),
-                GeneralPropertiesManager.getString("RepositoryTypeTemp") + File.separator +
-                    tempFolderName);
+                GeneralPropertiesManager.getString("RepositoryTypeTemp") + File.separator
+                + tempFolderName);
           }
 
           // Creation of the file in the temp folder
-          File fileUploaded =
-                  new File(FileRepositoryManager.getAbsolutePath(kmeliaScc.getComponentId())
-                      + GeneralPropertiesManager.getString("RepositoryTypeTemp")
-                      + File.separator
-                      + tempFolderName
-                      + File.separator + logicalName);
+          File fileUploaded = new File(FileRepositoryManager.getAbsolutePath(kmeliaScc
+              .getComponentId()) + GeneralPropertiesManager.getString("RepositoryTypeTemp")
+              + File.separator + tempFolderName + File.separator + logicalName);
           fileItem.write(fileUploaded);
 
           // Is a real file ?
-          if (fileSize > 0) {
-            SilverTrace.debug("kmelia",
-                    "KmeliaRequestRouter.processFormUpload()",
-                    "root.MSG_GEN_PARAM_VALUE", "fileUploaded = " + fileUploaded
-                        + " fileSize=" + fileSize + " fileType=" + fileType
-                        + " importMode=" + importMode + " draftMode=" + draftMode);
+          if (fileSize > 0L) {
+            SilverTrace.debug("kmelia", "KmeliaRequestRouter.processFormUpload()",
+                "root.MSG_GEN_PARAM_VALUE", "fileUploaded = " + fileUploaded
+                + " fileSize=" + fileSize + " fileType=" + fileType
+                + " importMode=" + importMode + " draftMode=" + draftMode);
             int nbFiles = 1;
             // Compute nbFiles only in unitary Import mode
-            if (!importMode.equals(KmeliaSessionController.UNITARY_IMPORT_MODE)
-                    && fileUploaded.getName().toLowerCase().endsWith(".zip")) {
+            if (!KmeliaSessionController.UNITARY_IMPORT_MODE.equals(importMode)
+                && fileUploaded.getName().toLowerCase().endsWith(".zip")) {
               nbFiles = ZipManager.getNbFiles(fileUploaded);
             }
 
             // Import !!
             List<PublicationDetail> publicationDetails = kmeliaScc.importFile(fileUploaded,
-                    fileType, topicId, importMode, draftMode, versionType);
+                fileType, topicId, importMode, draftMode, versionType);
             long processDuration = new Date().getTime() - processStart;
 
             // Title for popup report
@@ -2066,23 +2014,22 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
             } else {
               importModeTitle = kmeliaScc.getString("kmelia.ImportModeMassifTitre");
             }
-
-            SilverTrace.debug("kmelia",
-                    "KmeliaRequestRouter.processFormUpload()",
-                    "root.MSG_GEN_PARAM_VALUE", "nbFiles = " + nbFiles
-                        + " publicationDetails=" + publicationDetails
-                        + " ProcessDuration=" + processDuration + " ImportMode="
-                        + importMode + " Draftmode=" + draftMode + " Title="
-                        + importModeTitle);
+            SilverTrace.debug("kmelia", "KmeliaRequestRouter.processFormUpload()",
+                "root.MSG_GEN_PARAM_VALUE", "nbFiles = " + nbFiles
+                + " publicationDetails=" + publicationDetails
+                + " ProcessDuration=" + processDuration + " ImportMode="
+                + importMode + " Draftmode=" + draftMode + " Title="
+                + importModeTitle);
 
             request.setAttribute("PublicationsDetails", publicationDetails);
             request.setAttribute("NbFiles", nbFiles);
             request.setAttribute("ProcessDuration", FileRepositoryManager.formatFileUploadTime(
-                    processDuration));
+                processDuration));
             request.setAttribute("ImportMode", importMode);
             request.setAttribute("DraftMode", draftMode);
             request.setAttribute("Title", importModeTitle);
-            request.setAttribute("Context", GeneralPropertiesManager.getString("ApplicationURL"));
+            request.setAttribute("Context", URLManager.getApplicationURL());
+
             destination = routeDestination + "reportImportFiles.jsp";
             String componentId = publicationDetails.get(0).getComponentInstanceId();
             if (kmeliaScc.isDefaultClassificationModifiable(topicId, componentId)) {
@@ -2110,15 +2057,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
           }
         }
       }
-    } /*
-       * catch (IOException e) { //File size exceeds Maximum file size message =
-       * attachmentResourceLocator.getString("fichierTropGrand")+ " (" +
-       * FileRepositoryManager.formatFileSize(maxFileSize) + "&nbsp;" +
-       * attachmentResourceLocator.getString("maximum") +") !!";
-       * request.setAttribute("Message",message); request.setAttribute("TopicId",topicId);
-       * destination = routeDestination + "importOneFile.jsp"; if (isMassiveMode) destination =
-       * routeDestination + "importMultiFiles.jsp"; }
-       */catch (Exception e) {
+    } catch (Exception e) {
       // Other exception
       request.setAttribute("Message", e.getMessage());
       request.setAttribute("TopicId", topicId);
@@ -2128,13 +2067,13 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       }
 
       SilverTrace.warn("kmelia", "KmeliaRequestRouter.processFormUpload()",
-              "root.EX_LOAD_ATTACHMENT_FAILED", e);
+          "root.EX_LOAD_ATTACHMENT_FAILED", e);
     }
     return destination;
   }
 
   private void processPath(KmeliaSessionController kmeliaSC, String id)
-          throws RemoteException {
+      throws RemoteException {
     if (!kmeliaSC.isKmaxMode) {
       NodePK pk = null;
       if (!StringUtil.isDefined(id)) {
@@ -2152,41 +2091,34 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
     }
   }
 
-  private void putXMLDisplayerIntoRequest(PublicationDetail pubDetail,
-          KmeliaSessionController kmelia, HttpServletRequest request)
-          throws PublicationTemplateException, FormException {
+  private void putXMLDisplayerIntoRequest(PublicationDetail pubDetail, KmeliaSessionController 
+      kmelia, HttpServletRequest request) throws PublicationTemplateException, FormException {
     String infoId = pubDetail.getInfoId();
     String pubId = pubDetail.getPK().getId();
     if (!StringUtil.isInteger(infoId)) {
       PublicationTemplateImpl pubTemplate =
-              (PublicationTemplateImpl) getPublicationTemplateManager().getPublicationTemplate(
-                  pubDetail.
-                      getPK().getInstanceId()
-                      + ":"
-                      + infoId);
+          (PublicationTemplateImpl) getPublicationTemplateManager().getPublicationTemplate(
+          pubDetail.getPK().getInstanceId() + ":" + infoId);
 
       // RecordTemplate recordTemplate = pubTemplate.getRecordTemplate();
       Form formView = pubTemplate.getViewForm();
-
       // get displayed language
       String language = checkLanguage(kmelia, pubDetail);
-
       RecordSet recordSet = pubTemplate.getRecordSet();
       DataRecord data = recordSet.getRecord(pubId, language);
       if (data == null) {
         data = recordSet.getEmptyRecord();
         data.setId(pubId);
       }
-
       request.setAttribute("XMLForm", formView);
       request.setAttribute("XMLData", data);
     }
   }
 
   private String processWizard(String function,
-          KmeliaSessionController kmeliaSC, HttpServletRequest request,
-          String rootDestination) throws RemoteException,
-          PublicationTemplateException, FormException {
+      KmeliaSessionController kmeliaSC, HttpServletRequest request,
+      String rootDestination) throws RemoteException,
+      PublicationTemplateException, FormException {
     String destination = "";
     if (function.equals("WizardStart")) {
       // récupération de l'id du thème dans lequel on veux mettre la
@@ -2334,7 +2266,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private void setWizardParams(HttpServletRequest request,
-          KmeliaSessionController kmelia) {
+      KmeliaSessionController kmelia) {
     // Paramètres du wizard
     request.setAttribute("Wizard", kmelia.getWizard());
     request.setAttribute("WizardRow", kmelia.getWizardRow());
@@ -2348,10 +2280,10 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private void setXMLForm(HttpServletRequest request,
-          KmeliaSessionController kmelia, String xmlFormName)
-          throws PublicationTemplateException, FormException {
+      KmeliaSessionController kmelia, String xmlFormName)
+      throws PublicationTemplateException, FormException {
     PublicationDetail pubDetail =
-            kmelia.getSessionPubliOrClone().getDetail();
+        kmelia.getSessionPubliOrClone().getDetail();
     String pubId = pubDetail.getPK().getId();
 
     String xmlFormShortName = null;
@@ -2359,22 +2291,17 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       xmlFormShortName = pubDetail.getInfoId();
       xmlFormName = null;
     } else {
-      xmlFormShortName = xmlFormName.substring(xmlFormName.indexOf("/") + 1,
-              xmlFormName.indexOf("."));
+      xmlFormShortName = xmlFormName.substring(xmlFormName.indexOf('/') + 1, xmlFormName
+          .indexOf('.'));
       SilverTrace.info("kmelia", "KmeliaRequestRouter.setXMLForm()",
-              "root.MSG_GEN_PARAM_VALUE", "xmlFormShortName = " + xmlFormShortName);
+          "root.MSG_GEN_PARAM_VALUE", "xmlFormShortName = " + xmlFormShortName);
 
       // register xmlForm to publication
       getPublicationTemplateManager().addDynamicPublicationTemplate(kmelia.getComponentId()
-              + ":" + xmlFormShortName, xmlFormName);
+          + ":" + xmlFormShortName, xmlFormName);
     }
-
-    PublicationTemplateImpl pubTemplate =
-            (PublicationTemplateImpl) getPublicationTemplateManager().getPublicationTemplate(
-                kmelia.
-                    getComponentId()
-                    + ":"
-                    + xmlFormShortName, xmlFormName);
+    PublicationTemplateImpl pubTemplate = (PublicationTemplateImpl) getPublicationTemplateManager()
+        .getPublicationTemplate(kmelia.getComponentId() + ':' + xmlFormShortName, xmlFormName);
     Form formUpdate = pubTemplate.getUpdateForm();
     RecordSet recordSet = pubTemplate.getRecordSet();
 
@@ -2392,13 +2319,11 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
     request.setAttribute("XMLFormName", xmlFormName);
   }
 
-  private void setLanguage(HttpServletRequest request,
-          KmeliaSessionController kmelia) {
+  private void setLanguage(HttpServletRequest request, KmeliaSessionController kmelia) {
     String language = request.getParameter("SwitchLanguage");
     if (StringUtil.isDefined(language)) {
       kmelia.setCurrentLanguage(language);
     }
-
     request.setAttribute("Language", kmelia.getCurrentLanguage());
   }
 
@@ -2407,21 +2332,20 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private String checkLanguage(KmeliaSessionController kmelia,
-          PublicationDetail pubDetail) {
+      PublicationDetail pubDetail) {
     return pubDetail.getLanguageToDisplay(kmelia.getCurrentLanguage());
   }
 
   private void checkAlias(KmeliaSessionController kmelia,
-          KmeliaPublication publication) {
+      KmeliaPublication publication) {
     if (!kmelia.getComponentId().equals(
-            publication.getDetail().getPK().getInstanceId())) {
+        publication.getDetail().getPK().getInstanceId())) {
       publication.asAlias();
     }
   }
 
-  private void updatePubliDuringUpdateChain(String id,
-          HttpServletRequest request, KmeliaSessionController kmelia)
-          throws RemoteException {
+  private void updatePubliDuringUpdateChain(String id, HttpServletRequest request,
+      KmeliaSessionController kmelia) throws RemoteException {
     // enregistrement des modifications de la publi
     String name = request.getParameter("Name");
     String description = request.getParameter("Description");
@@ -2452,16 +2376,12 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
     fields.setTopics(topics);
     kmelia.setFieldUpdateChain(fields);
-
-    Date jBeginDate = null;
-    Date jEndDate = null;
     String pubId = "X";
     if (StringUtil.isDefined(id)) {
       pubId = id;
     }
-    PublicationDetail pubDetail = new PublicationDetail(pubId, name,
-            description, null, jBeginDate, jEndDate, null, "0", "", keywords, "",
-            "", "", "");
+    PublicationDetail pubDetail = new PublicationDetail(pubId, name, description, null, null, null,
+        null, "0", "", keywords, "", "", "", "");
     pubDetail.setStatus("Valid");
     I18NHelper.setI18NInfo(pubDetail, request);
 
@@ -2470,8 +2390,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
       String helperClassName = kmelia.getFieldUpdateChain().getHelper();
       UpdateChainHelper helper;
       helper = (UpdateChainHelper) Class.forName(helperClassName).newInstance();
-      UpdateChainHelperContext uchc = new UpdateChainHelperContext(pubDetail,
-              kmelia);
+      UpdateChainHelperContext uchc = new UpdateChainHelperContext(pubDetail, kmelia);
       uchc.setAllTopics(kmelia.getAllTopics());
       helper.execute(uchc);
       pubDetail = uchc.getPubDetail();
@@ -2502,9 +2421,9 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private String processUpdateChainOperation(String rootDestination,
-          String function, KmeliaSessionController kmelia,
-          HttpServletRequest request) throws IOException, ClassNotFoundException,
-          SAXException, ParserConfigurationException {
+      String function, KmeliaSessionController kmelia,
+      HttpServletRequest request) throws IOException, ClassNotFoundException,
+      SAXException, ParserConfigurationException {
     if (function.equals("UpdateChainInit")) {
       // récupération du descripteur
       kmelia.initUpdateChainDescriptor();
@@ -2528,11 +2447,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
       if (StringUtil.isDefined(id)) {
         request.setAttribute("Rang", kmelia.getRang());
-        if (kmelia.getSessionPublicationsList() != null) {
-          request.setAttribute("NbPublis", kmelia.getSessionPublicationsList().size());
-        } else {
-          request.setAttribute("NbPublis", 1);
-        }
+        request.setAttribute("NbPublis", kmelia.getNbPublis());
 
         // request.setAttribute("PathList",kmelia.getPublicationFathers(id));
         request.setAttribute("LinkedPathString", kmelia.getSessionPath());
@@ -2602,6 +2517,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
   /**
    * Gets an instance of PublicationTemplateManager.
+   *
    * @return an instance of PublicationTemplateManager.
    */
   public PublicationTemplateManager getPublicationTemplateManager() {
@@ -2609,27 +2525,20 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
   }
 
   private void setTemplatesUsedIntoRequest(KmeliaSessionController kmelia,
-          HttpServletRequest request) throws RemoteException {
+      HttpServletRequest request) throws RemoteException {
     Collection<String> modelUsed = kmelia.getModelUsed();
     Collection<PublicationTemplate> listModelXml = new ArrayList<PublicationTemplate>();
-    List<PublicationTemplate> templates = new ArrayList<PublicationTemplate>();
-    try {
-      templates = getPublicationTemplateManager().getPublicationTemplates();
-      // recherche de la liste des modèles utilisables
-      PublicationTemplate xmlForm;
-      for (PublicationTemplate template : templates) {
-        xmlForm = template;
-        // recherche si le modèle est dans la liste
-        if (modelUsed.contains(xmlForm.getFileName())) {
-          listModelXml.add(xmlForm);
-        }
+    List<PublicationTemplate> templates = kmelia.getForms();
+    // recherche de la liste des modèles utilisables
+    for (PublicationTemplate template : templates) {
+      PublicationTemplate xmlForm = template;
+      // recherche si le modèle est dans la liste
+      if (modelUsed.contains(xmlForm.getFileName())) {
+        listModelXml.add(xmlForm);
       }
-
-      request.setAttribute("XMLForms", listModelXml);
-    } catch (Exception e) {
-      SilverTrace.info("kmelia", "KmeliaRequestRouter.getDestination(ListModels)",
-              "root.MSG_GEN_PARAM_VALUE", "", e);
     }
+
+    request.setAttribute("XMLForms", listModelXml);
 
     // put dbForms
     Collection<ModelDetail> dbForms = kmelia.getAllModels();
@@ -2652,7 +2561,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
     // s'il n'y a pas de modèles selectionnés, les présenter tous
     if ((listModelXml == null || listModelXml.isEmpty())
-            && (listModelForm == null || listModelForm.isEmpty()) && !wysiwygValid) {
+        && (listModelForm == null || listModelForm.isEmpty()) && !wysiwygValid) {
       request.setAttribute("XMLForms", templates);
       request.setAttribute("DBForms", dbForms);
       request.setAttribute("WysiwygValid", Boolean.TRUE);
@@ -2661,6 +2570,7 @@ public class KmeliaRequestRouter extends ComponentRequestRouter<KmeliaSessionCon
 
   /**
    * Converts the specified identifier into a Silverpeas content primary key.
+   *
    * @param instanceId the unique identifier of the component instance to which the contents
    * belongs.
    * @param ids one or several identifiers of Silverpeas contents.
